Shenandoah: AlwaysPreTouch should not disable heap resizing or uncommits

XMLWordPrintable

    • gc
    • b25

        At present, enabling -XX:+AlwaysPreTouch implicitly disables uncommit and sets the heap size to Xmx. This is not coherent with the rest of OpenJDK garbage collectors that only pretouch when the actual commit happens. Shenandoah should do the same.

        It would still be recommended to set -Xmx == -Xms for AlwaysPreTouch to work without excess latencies.

        Current code makes JDK-8245720 logging confused: initial/min heap size would be reported from -Xms, not from the values that AlwaysPreTouch block adjusted.

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: