8245757: Shenandoah: AlwaysPreTouch should not disable heap resizing or uncommits

Reviewed-by: rkennke